# tuber

./: .buildpacks  .gitignore  Dockerfile  LICENSE  Makefile  Procfile  README.md  Taskfile.yml  app-start.sh  app.json  codecov.yaml  docker-compose.debug.yml  docker-compose.dev.yml  docker-compose.yml  package-lock.json  package.json  pytest.ini  setup.cfg  setup.py  tuber.spec  vue.config.js
backend/: .dockerignore  .gitignore  Dockerfile  MANIFEST.in  Pipfile  entrypoint.sh  pyproject.toml  pytest.ini  requirements-test.txt  requirements.txt  setup.cfg  setup.py  test.db
backend/migrations/: env.py
backend/migrations/versions/: 0f768e57a051_adding_active_column_to_email_source.py  542fdb87670c_added_backgroundjobs.py  7340c2537750_allow_null_badge_in_badge_to_room_night_.py  b9644d65529a_initial.py  ba06f3351d89_add_hidden_room_nights_for_edge_edge_.py  e3921de45eb5_merging_master_and_refactor.py  eca6792a5ab5_refactoring.py
backend/tests/: conftest.py  skip_test_shifts.py  test_assignment_filters.py  test_attendee_actions.py  test_circuitbreaker.py  test_email_tools.py  test_force_https.py  test_hotel.py  test_importer.py  test_limits.py  test_missing_shifts.py  test_request_validation.py  test_restriction_modes.py  test_room_matching.py  test_rooming_dashboard.py  test_shifts.py  test_tuber.py  util.py
backend/tuber/: __init__.py  __main__.py  alembic.ini  aws.py  backgroundjobs.py  config.py  csrf.py  database.py  errors.py  names.py  permissions.py  wsgi.py
backend/tuber/api/: __init__.py  backgroundjobs.py  checklists.py  emails.py  events.py  health.py  hotels.py  importer.py  night_approval.py  room_matcher.py  shifts.py  uber.py  users.py  util.py
backend/tuber/migrations/: env.py
backend/tuber/migrations/versions/: 03fa60ed8de2_adding_reassigned_field_to_hotel_request.py  091e98f942c5_addropping_unique_constraint_on_badge_.py  1708acb6e515_enabling_cascade_deletion.py  28e0b36a0af8_added_timezone_to_event.py  3dd38bec527c_improving_uber_auth_flow.py  44ea59b15fb5_storing_uber_details_in_db.py  4ae40638e863_adding_hotel_block_to_requests.py  4d2fcbec3fc3_updating_roommate_requests.py  5358d76ff848_expanding_deletion_cascades_when_.py  53a92676ee86_adding_created_and_modified_times_to_.py  542fdb87670c_added_backgroundjobs.py  6be1d8f61589_adding_event_to_ribbons_and_badgetypes.py  6fe96ce9e06a_adding_readonly_column_to_event_and_.py  796869dd217d_removing_string_lengths_from_db.py  7a98a0c9fb44_added_shift_management.py  7e310668394d_setting_nullable_fks_to_set_null_.py  844962e6352c_adding_reapproved_field_to_hotel_request.py  9595449dcb38_add_event_column_to_hotel_location.py  a1869a1eb145_renamed_event_id_to_event.py  a19f71e34e64_new_frontend.py  afc23d43704e_added_shift_start_and_end_times_to_.py  b40cd963a916_adding_api_keys.py  b7c4d1a90f23_structured_room_night_restrictions.py  cd6926818967_make_sure_all_foreignkeys_either_have_a_.py  eca6792a5ab5_refactoring.py  (+4 more)
backend/tuber/models/: __init__.py  backgroundjob.py  badge.py  checklist.py  email.py  event.py  hotel.py  shift.py  user.py
contrib/: Dockerfile  (+11 more)
(+369 files in other folders)
